--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -23,14 +23,14 @@ neighborhood_radius: 1.0 #m
 max_num_neighbors: 10
 
 
-# polynomial trajectory
-polynomial_degree: 7
-desired_velocity: 1 # m/s
-differential_degree: 4 # 3: jerk 4: snap
-regularization_weights: 1
-sample_delta_time: 0.1
+# # polynomial trajectory
+# polynomial_degree: 7
+# desired_velocity: 1 # m/s
+# differential_degree: 4 # 3: jerk 4: snap
+# regularization_weights: 1
+# sample_delta_time: 0.1
 
-# corridor:
-maximum_iteration_num: 50
-initial_radius: 0.5 # m
-shrinking_factor: 0.95
+# # corridor:
+# maximum_iteration_num: 50
+# initial_radius: 0.5 # m
+# shrinking_factor: 0.95
