--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -9,8 +9,8 @@ env_box: [-100, 100, -100, 100, 0, 1.5] # xmin, xmax, ymin, ymax, zmin, zmax
 
 # Planner parameters:
 timeout: 2.0 #s
-rrt_incremental_distance: 0.6 #m
-rrt_connect_goal_ratio: 0.3
+rrt_incremental_distance: 0.3 #m
+rrt_connect_goal_ratio: 0.2
 goal_reach_distance: 0.4 #m
 map_resolution: 0.2 # this should be at least bigger or equal to the true map resolution
 
@@ -25,12 +25,13 @@ max_num_neighbors: 10
 
 # # polynomial trajectory
 polynomial_degree: 7
-desired_velocity: 1 # m/s
 differential_degree: 4 # 3: jerk 4: snap
+continuity_degree: 4 # second order continuous
+desired_velocity: 1 # m/s
 regularization_weights: 1
 sample_delta_time: 0.1
 
 # corridor:
-maximum_iteration_num: 10
-initial_radius: 0.5 # m
+maximum_iteration_num: 20
+initial_radius: 1 # m
 shrinking_factor: 0.95
