--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -33,7 +33,7 @@ desired_angular_velocity: 0.5 # rad/s
 maximum_iteration_num: 20
 sample_delta_time: 0.1
 
-# corridor:
+# corridor constraint (only for mode=false):
 initial_radius: 0.5 # m
 shrinking_factor: 0.6
 corridor_res: 5.0 # how many corridor per second 
