--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -1,5 +1,6 @@
 # Robot:
-collision_box: [1.0, 1.0, 0.6]
+# collision_box: [1.0, 1.0, 0.6]
+collision_box: [0.8, 0.8, 0.4]
 # collision_box: [0.4, 0.4, 0.2]
 
 
@@ -27,8 +28,8 @@ max_num_neighbors: 10
 mode: True # True: adding waypoint, False: corridor constraint 
 polynomial_degree: 10
 differential_degree: 4 # 3: jerk 4: snap
-continuity_degree: 3 # second order continuous
-desired_velocity: 0.3 # m/s
+continuity_degree: 4 # second order continuous
+desired_velocity: 3 # m/s
 desired_angular_velocity: 0.5 # rad/s
 maximum_iteration_num: 20
 sample_delta_time: 0.1
