--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,9 +105,9 @@ find_package(OsqpEigen REQUIRED)
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES trajectory_planner
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+ INCLUDE_DIRS include
+ LIBRARIES trajectory_planner
+ CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -126,9 +126,15 @@ include_directories(
 # add_library(${PROJECT_NAME}
 #   src/${PROJECT_NAME}/trajectory_planner.cpp
 # )
-add_library(polyTrajSolver include/${PROJECT_NAME}/polyTrajSolver.cpp)
-add_library(polyTrajOctomap include/${PROJECT_NAME}/polyTrajOctomap.cpp)
-add_library(pwlTraj include/${PROJECT_NAME}/piecewiseLinearTraj.cpp)
+# add_library(polyTrajSolver include/${PROJECT_NAME}/polyTrajSolver.cpp)
+# add_library(polyTrajOctomap include/${PROJECT_NAME}/polyTrajOctomap.cpp)
+# add_library(pwlTraj include/${PROJECT_NAME}/piecewiseLinearTraj.cpp)
+add_library(
+	${PROJECT_NAME} 
+	include/${PROJECT_NAME}/polyTrajSolver.cpp 
+	include/${PROJECT_NAME}/polyTrajOctomap.cpp
+	include/${PROJECT_NAME}/piecewiseLinearTraj.cpp
+)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
@@ -159,13 +165,15 @@ add_executable(testEigen src/test/testEigen.cpp)
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
-target_link_libraries(polyTrajSolver OsqpEigen::OsqpEigen)
-target_link_libraries(polyTrajOctomap polyTrajSolver pwlTraj)
-target_link_libraries(polyRRTNode ${catkin_LIBRARIES} polyTrajOctomap)
-target_link_libraries(polyRRTStarNode ${catkin_LIBRARIES} polyTrajOctomap)
-target_link_libraries(polyRRTGoalNode ${catkin_LIBRARIES} polyTrajOctomap)
-target_link_libraries(polyRRTStarGoalNode ${catkin_LIBRARIES} polyTrajOctomap)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
+# target_link_libraries(polyTrajSolver OsqpEigen::OsqpEigen)
+# target_link_libraries(polyTrajOctomap polyTrajSolver pwlTraj)
+target_link_libraries(polyRRTNode ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(polyRRTStarNode ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(polyRRTGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(polyRRTStarGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
+
 
 #############
 ## Install ##
@@ -189,18 +197,18 @@ target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 
 ## Mark libraries for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
+)
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  # FILES_MATCHING PATTERN "*.h"
+  # PATTERN ".svn" EXCLUDE
+)
 
 ## Mark other files for installation (e.g. launch and bag files, etc.)
 # install(FILES
