--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,11 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   octomap_ros
   global_planner
-  OsqpEigen
 )
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
-# find_package(OsqpEigen REQUIRED)
+find_package(OsqpEigen REQUIRED)
 
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
