--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -1,7 +1,7 @@
 # Robot:
 # collision_box: [1.0, 1.0, 0.6]
-collision_box: [0.8, 0.8, 0.4]
-# collision_box: [0.4, 0.4, 0.2]
+# collision_box: [0.8, 0.8, 0.4]
+collision_box: [0.4, 0.4, 0.2]
 
 
 # Environment:
@@ -26,16 +26,20 @@ max_num_neighbors: 10
 
 
 # # polynomial trajectory
-mode: true # True: adding waypoint, False: corridor constraint 
-polynomial_degree: 10
-differential_degree: 3 # 3: jerk 4: snap
-continuity_degree: 2 # second order continuous
+mode: false # True: adding waypoint, False: corridor constraint 
+polynomial_degree: 7
+differential_degree: 4 # 3: jerk 4: snap
+continuity_degree: 3 # second order continuous
 desired_velocity: 1 # m/s
 desired_angular_velocity: 0.5 # rad/s
 maximum_iteration_num: 20
 sample_delta_time: 0.1
 
+# soft waypoint constraint
+soft_constraint: false
+constraint_size: 0.5 # not in z diection
+
 # corridor constraint (only for mode=false):
-initial_radius: 10 # m
-shrinking_factor: 0.6
-corridor_res: 10.0 # how many corridor per second 
+initial_radius: 0.5 # m
+shrinking_factor: 0.8
+corridor_res: 8.0 # how many corridor per second 
