--- a/cfg/planner.yaml
+++ b/cfg/planner.yaml
@@ -29,12 +29,13 @@ max_num_neighbors: 10
 
 # # polynomial trajectory
 mode: false # True: adding waypoint, False: corridor constraint 
-polynomial_degree: 10
+polynomial_degree: 7
 differential_degree: 4 # 3: jerk 4: snap
 continuity_degree: 3 # second order continuous
 desired_velocity: 1 # m/s
 desired_angular_velocity: 0.5 # rad/s
-maximum_iteration_num: 20
+maximum_iteration_num: 100
+traj_timeout: 0.1
 sample_delta_time: 0.1
 
 # soft waypoint constraint
