--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,6 +136,7 @@ add_library(
 	include/${PROJECT_NAME}/polyTrajSolver.cpp 
 	include/${PROJECT_NAME}/polyTrajOctomap.cpp
 	include/${PROJECT_NAME}/piecewiseLinearTraj.cpp
+  include/${PROJECT_NAME}/bspline.cpp
 )
 
 ## Add cmake target dependencies of the library
@@ -153,6 +154,7 @@ add_executable(polyRRTGoalNode src/polyRRTGoalNode.cpp)
 add_executable(polyRRTStarGoalNode src/polyRRTGoalNode.cpp)
 add_executable(testEigen src/test/testEigen.cpp)
 add_executable(testTrajSolver src/test/testTrajSolver.cpp)
+add_executable(testBspline src/test/testBspline.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -177,6 +179,7 @@ target_link_libraries(polyRRTGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(polyRRTStarGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 target_link_libraries(testTrajSolver ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(testBspline ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 
 #############
