polyTrajOccMap in Progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,7 @@ add_library(
 	include/${PROJECT_NAME}/piecewiseLinearTraj.cpp
   include/${PROJECT_NAME}/bspline.cpp
   include/${PROJECT_NAME}/bsplineTraj.cpp
+  include/${PROJECT_NAME}/polyTrajOccMap.cpp
 )
 
 ## Add cmake target dependencies of the library
