--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,7 @@ add_executable(polyRRTStarGoalNode src/polyRRTGoalNode.cpp)
 add_executable(testEigen src/test/testEigen.cpp)
 add_executable(testTrajSolver src/test/testTrajSolver.cpp)
 add_executable(testBspline src/test/testBspline.cpp)
+add_executable(test_bspline_fit src/test/test_bspline_fit.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -187,6 +188,7 @@ target_link_libraries(polyRRTStarGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 target_link_libraries(testTrajSolver ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(testBspline ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(test_bspline_fit ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 
 #############
