basic test framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,6 +163,7 @@ add_executable(testEigen src/test/testEigen.cpp)
 add_executable(testTrajSolver src/test/testTrajSolver.cpp)
 add_executable(testBspline src/test/testBspline.cpp)
 add_executable(test_bspline_fit src/test/test_bspline_fit.cpp)
+add_executable(bspline_navigation_node src/bspline_navigation_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -189,6 +190,7 @@ target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 target_link_libraries(testTrajSolver ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(testBspline ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(test_bspline_fit ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(bspline_navigation_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 
 #############
