--- a/cfg/bspline_navigation/occupancy_map.yaml
+++ b/cfg/bspline_navigation/occupancy_map.yaml
@@ -7,6 +7,7 @@ odom_topic: /mavros/local_position/odom
 
 # robot size
 robot_size: [0.8, 0.8, 0.3]
+# robot_size: [0.2, 0.2, 0.2]
 
 # Camera Parameters
 depth_intrinsics: [554.254691191187, 554.254691191187, 320.5, 240.5] # fx,  fy, cx, cy
@@ -35,6 +36,7 @@ p_occ: 0.80
 map_resolution: 0.1
 ground_height: -0.1 # m
 map_size: [40, 40, 3] # meter. in x y z direction (reserved size)
+# map_size: [50, 50, 3] # meter. in x y z direction (reserved size)
 local_update_range: [5, 5, 5]
 local_bound_inflation: 3.0 # inflate local bound in meter
 clean_local_map: false
@@ -47,5 +49,7 @@ verbose: false
 
 # prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-Autonomy/autonomous_flight/cfg/saved_map/square_static_map2.pcd"
 prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-Autonomy/trajectory_planner/map/square_static_map2.pcd"
+
+# prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-Autonomy/trajectory_planner/map/ego_env.pcd"
 
 # prebuilt_map_directory: "No"
