--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,14 +155,14 @@ add_library(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/trajectory_planner_node.cpp)
-add_executable(polyRRTNode src/polyRRTNode.cpp)
-add_executable(polyRRTStarNode src/polyRRTStarNode.cpp)
-add_executable(polyRRTGoalNode src/polyRRTGoalNode.cpp)
-add_executable(polyRRTStarGoalNode src/polyRRTGoalNode.cpp)
+add_executable(poly_RRT_node src/poly_RRT_node.cpp)
+add_executable(poly_RRTStar_node src/poly_RRTStar_node.cpp)
+add_executable(poly_RRT_goal_node src/poly_RRT_goal_node.cpp)
+add_executable(poly_RRTStar_goal_node src/poly_RRTStar_goal_node.cpp)
 # add_executable(testEigen src/test/testEigen.cpp)
 # add_executable(testTrajSolver src/test/testTrajSolver.cpp)
 # add_executable(testBspline src/test/testBspline.cpp)
-# add_executable(test_bspline_fit src/test/test_bspline_fit.cpp)
+# add_executable(testBsplineFit src/test/testBsplineFit.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -181,14 +181,14 @@ add_executable(polyRRTStarGoalNode src/polyRRTGoalNode.cpp)
 target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 # target_link_libraries(polyTrajSolver OsqpEigen::OsqpEigen)
 # target_link_libraries(polyTrajOctomap polyTrajSolver pwlTraj)
-target_link_libraries(polyRRTNode ${catkin_LIBRARIES} ${PROJECT_NAME})
-target_link_libraries(polyRRTStarNode ${catkin_LIBRARIES} ${PROJECT_NAME})
-target_link_libraries(polyRRTGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
-target_link_libraries(polyRRTStarGoalNode ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(poly_RRT_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(poly_RRTStar_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(poly_RRT_goal_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(poly_RRTStar_goal_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 # target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 # target_link_libraries(testTrajSolver ${catkin_LIBRARIES} ${PROJECT_NAME})
 # target_link_libraries(testBspline ${catkin_LIBRARIES} ${PROJECT_NAME})
-# target_link_libraries(test_bspline_fit ${catkin_LIBRARIES} ${PROJECT_NAME})
+# target_link_libraries(testBsplineFit ${catkin_LIBRARIES} ${PROJECT_NAME})
 
 
 #############
