--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -180,7 +180,8 @@ add_executable(poly_RRTStar_goal_node src/poly_RRTStar_goal_node.cpp)
 #   ${catkin_LIBRARIES}
 # )
 # target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libosqp.a" "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libOsqpEigen.so.0.7.0")
+# target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libosqp.a" "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libOsqpEigen.so.0.7.0")
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/libosqp.so ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/libOsqpEigen.so.0.7.0)
 # target_link_libraries(polyTrajSolver OsqpEigen::OsqpEigen)
 # target_link_libraries(polyTrajOctomap polyTrajSolver pwlTraj)
 target_link_libraries(poly_RRT_node ${catkin_LIBRARIES} ${PROJECT_NAME})
