add bspline demo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,7 @@ add_executable(poly_RRT_node src/poly_RRT_node.cpp)
 add_executable(poly_RRTStar_node src/poly_RRTStar_node.cpp)
 add_executable(poly_RRT_goal_node src/poly_RRT_goal_node.cpp)
 add_executable(poly_RRTStar_goal_node src/poly_RRTStar_goal_node.cpp)
+add_executable(bspline_node src/bspline_node.cpp)
 # add_executable(testEigen src/test/testEigen.cpp)
 # add_executable(testTrajSolver src/test/testTrajSolver.cpp)
 # add_executable(testBspline src/test/testBspline.cpp)
@@ -188,6 +189,7 @@ target_link_libraries(poly_RRT_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(poly_RRTStar_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(poly_RRT_goal_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 target_link_libraries(poly_RRTStar_goal_node ${catkin_LIBRARIES} ${PROJECT_NAME})
+target_link_libraries(bspline_node ${catkin_LIBRARIES} ${PROJECT_NAME})
 # target_link_libraries(testEigen ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 # target_link_libraries(testTrajSolver ${catkin_LIBRARIES} ${PROJECT_NAME})
 # target_link_libraries(testBspline ${catkin_LIBRARIES} ${PROJECT_NAME})
