--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,7 +182,19 @@ add_executable(bspline_node src/bspline_node.cpp)
 # )
 # target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} OsqpEigen::OsqpEigen)
 # target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libosqp.a" "${CMAKE_CURRENT_SOURCE_DIR}/include/trajectory_planner/third_party/libOsqpEigen.so.0.7.0")
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/libosqp.so ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/libOsqpEigen.so.0.7.0)
+if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
+  message("Detected x86_64 architecture.")
+  target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/x86/libosqp.so ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/x86/libOsqpEigen.so.0.7.0)
+  # target_link_libraries(test_time_optimizer ${PROJECT_NAME})
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "arm")
+  message("Detected ARM architecture.")
+  target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/ARM/libosqp.so ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/ARM/libOsqpEigen.so.0.8.0)
+elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64")
+  message("Detected ARM64 architecture.")
+  target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/ARM/libosqp.so ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}/third_party/lib/ARM/libOsqpEigen.so.0.8.0)
+else()
+    message("Unknown architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+endif()
 # target_link_libraries(polyTrajSolver OsqpEigen::OsqpEigen)
 # target_link_libraries(polyTrajOctomap polyTrajSolver pwlTraj)
 target_link_libraries(poly_RRT_node ${catkin_LIBRARIES} ${PROJECT_NAME})
