--- a/cfg/test/occupancy_map.yaml
+++ b/cfg/test/occupancy_map.yaml
@@ -49,4 +49,5 @@ verbose: false
 
 # prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/square_static_map.pcd"
 prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/floorplan1_static_map.pcd"
+# prebuilt_map_directory: "/home/zhefan/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/tree_static_map.pcd"
 
