--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,7 @@ add_library(
   include/${PROJECT_NAME}/polyTrajOccMap.cpp
   include/${PROJECT_NAME}/clustering/Kmeans.cpp
   include/${PROJECT_NAME}/clustering/obstacleClustering.cpp
+  include/${PROJECT_NAME}/mpcPlanner.cpp
 )
 
 
