--- a/cfg/mpc_interactive/polyTraj_param.yaml
+++ b/cfg/mpc_interactive/polyTraj_param.yaml
@@ -10,4 +10,4 @@ poly_traj/soft_constraint: false
 poly_traj/constraint_radius: 0.5
 poly_traj/sample_delta_time: 0.1
 poly_traj/maximum_iteration_num: 10
-poly_traj/use_pwl_failsafe: true
+poly_traj/use_pwl_failsafe: false
