modified:   CMakeLists.txt 	modified:   cfg/mpc_interactive/mpc_param.yaml 	new file:   cfg/mpc_interactive/obstacle_test_param.yaml 	modified:   cfg/mpc_interactive/occupancy_map.yaml 	modified:   include/trajectory_planner/mpcPlanner.cpp 	new file:   include/trajectory_planner/obstacleTest/dynamicObstacleGenerator.cpp 	new file:   include/trajectory_planner/obstacleTest/dynamicObstacleGenerator.h 	modified:   launch/mpc_interactive.launch 	modified:   rviz/mpc_interactive.rviz 	modified:   src/mpc_node.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ add_library(
   include/${PROJECT_NAME}/clustering/Kmeans.cpp
   include/${PROJECT_NAME}/clustering/obstacleClustering.cpp
   include/${PROJECT_NAME}/mpcPlanner.cpp
+  include/${PROJECT_NAME}/obstacleTest/dynamicObstacleGenerator.cpp
 )
 
 
