--- a/cfg/mpc_interactive/occupancy_map.yaml
+++ b/cfg/mpc_interactive/occupancy_map.yaml
@@ -47,7 +47,7 @@ max_height_visualization: 2.5 # m
 visualize_global_map: true
 verbose: false
 
-prebuilt_map_directory: "No"
-# prebuilt_map_directory: "/home/jhy/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/square_static_map.pcd"
+# prebuilt_map_directory: "No"
+prebuilt_map_directory: "/home/jhy/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/square_static_map.pcd"
 # prebuilt_map_directory: "/home/zhefanx/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/square_static_map.pcd"
 # prebuilt_map_directory: "/home/zhefanx/catkin_ws/src/CERLAB-UAV-Autonomy/trajectory_planner/map/floorplan1_static_map.pcd"
