--- a/cfg/mpc_interactive/obstacle_test_param.yaml
+++ b/cfg/mpc_interactive/obstacle_test_param.yaml
@@ -5,7 +5,8 @@ obstacles: [6, 2.5, 1.0, 1.5, 1.2, 2.0, 0.0, 0, 0, # obstacle 1 [pos, size, vel]
             5, 0, 1.0, 0.6, 1.3, 2.0, 0.0, 0, 0,
             0, 3.3, 1.0, 0.8, 0.6, 2.0, 0.0, 0.0, 0]
 
-dynamic_obstacles: [1, 2, 3, 4, 5, 6, 7] # start, end, vel 
+dynamic_obstacles: [[1, 2, 3, 4, 5, 6, 7],
+                    [1, 2, 3, 4, 5, 6, 7]] # start, end, vel 
 
 #obstacle motion range
 max: [10, 10, 10] #x, y, z
