modified:   .vscode/settings.json 	modified:   CMakeLists.txt 	modified:   cfg/mpc_interactive/occupancy_map.yaml 	modified:   src/mpc_solver_setup.cpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "bit": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "eigen": "cpp"
     }
 }
